@@ -1,6 +1,7 @@
 openmediavault (6.9.2-1) stable; urgency=low
 
-  *
+  * Disable the caching of UI files to prevent annoying browser
+    cache flushing.
 
  -- Volker Theile <volker.theile@openmediavault.org>  Tue, 26 Sep 2023 17:24:48 +0200
 
